Added region name ui
